# field-sim

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  clang-tidy-checks.txt
libsrc/: CMakeLists.txt
shader/: lines.frag  lines.vert  particle.comp
src/: gfx.cpp  gfx.hpp  gl.cpp  gl.hpp  glsl.cpp  glsl.hpp  main.cpp  math.hpp  util.hpp
src/util/: deferred_init.hpp  singleton.hpp  unique.hpp  unique_handle.hpp  util.hpp
